# lafufu

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
assets/images/sprites/: README.md
assets/wakeword/: README.md  lafufu.onnx  lafufu.tflite
debug/lipsync/: 00_servo_only.py  01_direct.py  02_envelope.py  03_gate.py  04_monolith.py  README.md  algorithms.py  common.py  legacy-comparison.md  server.py
deploy/: deploy.sh  install.sh  lafufu-btcast.sh
deploy/nats/: nats-server.conf  nats-server.production.conf
deploy/sudoers/: lafufu-services
deploy/systemd/: lafufu-agent.service  lafufu-animator.service  lafufu-btcast.service  lafufu-control.service  lafufu-kiosk.service  lafufu-printer.service  lafufu.target  nats.service
docs/: 2026-05-20-production-readiness-review.md  local-dev.md
docs/superpowers/plans/: 2026-05-17-lafufu-phase-0-implementation.md  2026-05-19-audio-io-optimizations.md  2026-05-19-lafufu-drag-controls.md  2026-05-19-pi-ip-discovery.md  2026-05-20-chat-persistence.md  2026-05-23-animation-system.md  2026-05-25-db-settings-migration.md  2026-05-26-unified-expression-registry.md  2026-05-28-prod-hardening.md
scripts/: _dev_backend_8090.py  apply_video_seeds.py  demo_control_nonats.py  demo_wakeword.py  dev-up.ps1  dev-up.sh  gen_lafufu_base_variants.py  gen_lafufu_sprites.py  get_piper_voice.ps1  get_piper_voice.sh  map_sprites_to_frames.py  shoot_companion.mjs  shoot_studio.mjs  smoke.sh  sniff_nats.py  sniff_nats_e2e.py
training/wakeword/: README.md
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/scripts/: gen_types.mjs
web/src/: app.tsx  index.css  landing.tsx  main.tsx
web/tests/: agent_state.test.ts  auth.test.ts  chat_log.test.ts  design.test.ts  head_drag.test.ts  nats_ws.test.ts  reactive_resource.test.ts  settings_form.test.ts  use_media.test.ts
(+50 files in other folders)
