[project]
name = "lafufu-workspace"
version = "0.1.0"
requires-python = ">=3.13"
description = "Lafufu — composable robot platform (Phase 0 foundation)"
license = "MIT"
authors = [{ name = "Joshua Bell", email = "jb@motherhaven.net" }]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

# openwakeword main declares speexdsp-ns (Linux-only noise suppression) as a
# hard dep, but it has no Python 3.13 wheels. We don't use openwakeword's
# optional noise-suppression feature — wakeword.py only calls predict() on
# raw audio — so override the dep with an impossible marker so uv skips it.
# Remove this override once speexdsp-ns publishes 3.13 wheels or openwakeword
# makes the dep truly optional.
override-dependencies = [
    "speexdsp-ns ; extra == 'this-extra-is-never-set'",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "-ra --strict-markers --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "nats-py>=2.14.0",
]
